# EvoSpace

./: CMakeLists.txt  README.md
src/: balance.json  body_genome.h  brain_genome.h  config.hpp  entity.cpp  entity.h  genome.h  layer.cpp  layer.h  main.cpp  mind.cpp  mind.h  network.cpp  network.h  neuron.cpp  neuron.h  object.cpp  object.h  planet.h  simulation.cpp  vector.cpp  vector.h
